--- a/.env
+++ b/.env
@@ -2,8 +2,10 @@ DATABASE_URL="postgresql://postgres:123456@localhost:5433/car?schema=public&conn
 
 PORT = 5000
 
-CLIENT_URL = "http://localhost:3000"
-SERVER_URL = "http://localhost:5000"
+CLIENT_URL = "http://192.168.100.2:3000"
+SERVER_URL = "http://192.168.100.2:5000"
+SOCKET_URL = "http://192.168.100.2:5001"
+
 
 JWT_ACCESS_SECRET="jwt_access"
 JWT_REFRESH_SECRET="jwt_refresh"
@@ -14,4 +16,8 @@ SMTP_PORT=587
 SMTP_USER="cakctusinc@gmail.com"
 SMTP_PASSWORD="rufgfeamlbukxumu"
 
+
+JWT_ACCESS_SECRET="jwt_access"
+JWT_REFRESH_SECRET="jwt_refresh"
+JWT_RESET_TOKEN="jwt_reset"
 
