--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "nestjs-i18n": "^10.3.5",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "phone": "^3.1.40",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
